# Polyhedron-Engine

./: .gitattributes  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/CLGame/: ClientGameExports.cpp  ClientGameExports.h  ClientGameLocal.h  Effects.cpp  Entities.cpp  Input.h  Main.cpp  Main.h  Media.cpp  NewFX.h  Parse.cpp  Predict.cpp  Screen.h  TemporaryEntities.cpp
src/CLGame/exports/: Core.cpp  Entities.cpp  Media.cpp  ServerMessage.cpp
src/Client/: Cinematic.cpp  ClientGame.cpp  Precache.cpp  input.cpp  parse.cpp  screen.cpp
src/Client/RMLUserInterface/: RmlNullUserInterface.cpp  RmlUserInterface.cpp  RmlUserInterface.h
src/Client/RMLUserInterface/Interfaces/: FileInterface.cpp  SystemInterface.cpp
src/Client/SoundDrivers/: OGG.cpp  OpenAL.cpp  Sound.cpp  Sound.h
src/Client/SoundDrivers/PolyHedronOpenAL/: Dynamic.cpp  Fixed.c
src/Client/UserInterface/: Demos.cpp  Management.cpp  Management.h  PlayerConfig.cpp  PlayerModels.cpp  Script.cpp  Servers.cpp
src/Common/: Command.cpp  FIFO.cpp  field.cpp  files.cpp  msg.cpp
src/Common/net/: chan_old.cpp  net.cpp  netchan.cpp
src/OS/SDL2/: Video.cpp
src/OS/Unix/: OSS.cpp
src/OS/Windows/: Client.h  Video.cpp
src/OS/unix/: system.cpp
src/Refresh/: Images.cpp
src/Refresh/VkPt/: path_tracer.cpp
src/Refresh/gl/: images.cpp
src/Refresh/gl/qgl/: dynamic.cpp
src/Refresh/vkpt/: main.cpp  material.cpp  vkpt.h
src/SVGame/: ChaseCamera.cpp  Combat.cpp  Commands.cpp  Effects.cpp  ImportsWrapper.cpp  Items.cpp  Main.cpp  Save.cpp  ServerCommands.cpp  ServerGameLocal.h  Spawn.cpp  Trigger.cpp  TypeInfo.h  Utilities.cpp  Utilities.h  Weapons.cpp  combat.cpp  commands.cpp  effects.cpp  entities.cpp  entities.h  g_local.h  items.cpp  save.cpp
src/SVGame/AI/: MonsterAI.cpp
src/SVGame/Entities/Base/: BaseTrigger.cpp  BaseTrigger.h  EntityBase.cpp  EntityBase.h
src/SVGame/Entities/World/: BodyCorpse.cpp  BodyCorpse.h  DebrisEntity.cpp  DebrisEntity.h  GibEntity.cpp  GibEntity.h
src/SVGame/Player/: Client.h  HUD.h  View.h  Weapons.cpp
src/SVGame/ai/: MonsterAI.cpp
src/SVGame/entities/base/: PlayerEntity.cpp  PlayerEntity.h  PrivateEntityBase.cpp  PrivateEntityBase.h  SVGBaseMover.cpp  SVGBaseMover.h  ServerGameEntity.cpp  SynchedEntityBase.cpp  SynchedEntityBase.h
src/SVGame/entities/func/: FuncAreaportal.cpp  FuncAreaportal.h  FuncButton.cpp  FuncButton.h  FuncDoor.cpp  FuncDoor.h  FuncDoorRotating.cpp  FuncDoorRotating.h  FuncExplosive.cpp  FuncExplosive.h  FuncRotating.cpp  FuncRotating.h  FuncTimer.cpp  FuncTimer.h  FuncTrain.cpp  FuncTrain.h  FuncWall.cpp  FuncWall.h
src/SVGame/entities/info/: InfoNull.cpp  InfoPlayerCoop.cpp  InfoPlayerCoop.h  InfoPlayerDeathmatch.cpp  InfoPlayerDeathmatch.h  InfoPlayerIntermission.cpp  (+3 more)
src/SVGame/gamemodes/: CoopGameMode.cpp  CoopGameMode.h  DefaultGameMode.cpp  DefaultGameMode.h
src/SVGame/player/: weapons.cpp
src/SVGame/weapons/: blaster.cpp  blaster.h
src/Server/: ServerGame.cpp  entities.cpp  entities.h  main.cpp  user.cpp  world.cpp
src/SharedGame/: PlayerMove.cpp
src/clgame/: ClientGameExports.cpp  ClientGameExports.h  ClientGameImports.h  clg_effects.cpp  clg_effects.h  clg_entities.cpp  clg_entities.h  clg_local.h  clg_main.cpp  clg_media.cpp  clg_newfx.cpp  clg_newfx.h  clg_parse.cpp  clg_predict.cpp  clg_tents.cpp  clg_tents.h  clg_view.cpp  clg_view.h
src/clgame/exports/: Core.cpp  Entities.cpp  Entities.h  Media.cpp  Movement.cpp  Prediction.cpp  Screen.cpp  ServerMessage.cpp  View.cpp
src/client/: clgame.cpp  client.h  console.cpp  crc.cpp  demo.cpp  entities.cpp  input.cpp  keys.cpp  locs.cpp  main.cpp  null.cpp  null_gl.cpp  parse.cpp  screen.cpp  view.cpp
src/client/rmlui/: rmlui.h
src/client/sound/: al.cpp  main.cpp  ogg.cpp  sound.h
src/client/ui/: nac.menu  playerconfig.cpp  ui.h
src/common/: bsp.cpp  cmd.cpp  cmodel.cpp  common.cpp  cvar.cpp  error.cpp  field.cpp  fifo.cpp  files.cpp  mdfour.cpp  msg.cpp  prompt.cpp  sizebuf.cpp  tests.cpp  utils.cpp  zone.cpp
src/common/net/: chan_old.cpp  net.cpp  netchan.cpp
src/os/sdl2/: sound.cpp  time.cpp  video.cpp
src/os/unix/: evdev.cpp  hunk.cpp  lirc.cpp  oss.cpp  system.cpp  tty.cpp
src/os/windows/: client.h  dsound.cpp  hunk.cpp  system.cpp  video.cpp  wave.cpp
src/refresh/: images.cpp  model_iqm.cpp  models.cpp
src/refresh/gl/: gl.h  hq2x.cpp  main.cpp  mesh.cpp  state.cpp  surf.cpp  tess.cpp  world.cpp
src/refresh/stb/: stb.cpp
src/refresh/vkpt/: buddy_allocator.cpp  device_memory_allocator.cpp  draw.cpp  god_rays.cpp  main.cpp  matrix.cpp  path_tracer.cpp  precomputed_sky.cpp  tone_mapping.cpp  transparency.cpp  vk_util.cpp  vkpt.h
src/server/: commands.cpp  entities.cpp  entities.h  init.cpp  main.cpp  save.cpp  send.cpp  send_old.cpp  server.h  svgame.cpp  user.cpp  world.cpp
src/server/Entities/: ServerEntity.h
src/shared/: SVGBaseEntity.h  math.cpp  shared.cpp
src/shared/Entities/: EntityBase.cpp  PrivateEntityBase.cpp  ServerEntity.cpp  ServerGameEntity.cpp  SynchedEntityBase.cpp
src/shared/math/: plane.cpp  vector3.cpp
src/sharedgame/: pmove.cpp
src/svgame/: ImportsWrapper.cpp  TypeInfo.h  brushfuncs.cpp  brushfuncs.h  chasecamera.cpp  chasecamera.h  combat.cpp  commands.cpp  effects.cpp  effects.h  entities.cpp  entities.h  functionpointers.cpp  g_local.h  items.cpp  main.cpp  save.cpp  spawn.cpp  trigger.cpp  trigger.h  utils.cpp  utils.h  weapons.cpp
src/svgame/ai/: MonsterAI.cpp  MonsterAI.h
src/svgame/entities/: EntityBase.cpp  EntityBase.h  Light.h  PrivateEntityBase.cpp  PrivateEntityBase.h  SynchedEntityBase.cpp  SynchedEntityBase.h  WorldSpawn.cpp  WorldSpawn.h  light.cpp
src/svgame/gamemodes/: CoopGameMode.cpp  CoopGameMode.h  DeathMatchGameMode.cpp  DeathMatchGameMode.h  DefaultGameMode.cpp  DefaultGameMode.h  IGameMode.h
src/svgame/physics/: physics.cpp  stepmove.cpp  stepmove.h
src/svgame/player/: client.cpp  client.h  hud.cpp  hud.h  trail.cpp  view.cpp  weapons.cpp  weapons.h
src/svgame/weapons/: blaster.cpp  machinegun.cpp  machinegun.h  shotgun.cpp  shotgun.h  supershotgun.cpp  supershotgun.h
(+194 files in other folders)
